--- a/config/config.yml
+++ b/config/config.yml
@@ -1,3 +1,5 @@
+default_locale: pt_BR
+
 opus_json_url:
   development: http://odin.capesesp.net/openbase/opus_json.php
   test: http://odin.capesesp.net/openbase/opus_json.php
