--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,15 @@
   }],
   "require": {
     "php": ">=5.3.2",
-    "katzgrau/klogger": "dev-master"
+    "robotdance/php-i18n": "~0.0",
+    "robotdance/php-app-config": "~0.0",
+    "robotdance/php-arguments": "~0.0",
+    "robotdance/php-console": "~0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
     "phpspec/phpspec": "~2.0",
-    "justinrainbow/json-schema": "2.0.3",
+    "robotdance/json-schema": "2.1.0",
     "icomefromthenet/reverse-regex": "0.0.6.3"
   },
   "config": {
