--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,14 @@
     "robotdance/php-i18n": "~0.0",
     "robotdance/php-app-config": "~0.0",
     "robotdance/php-arguments": "~0.0",
-    "robotdance/php-console": "~0.0"
+    "robotdance/php-console": "~0.0",
+    "ext-soap": "*",
+    "ext-curl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
     "phpspec/phpspec": "~2.0",
-    "robotdance/json-schema": "2.1.0",
+    "robotdance/php-json-schema": "~2.1.0",
     "icomefromthenet/reverse-regex": "0.0.6.3"
   },
   "config": {
